--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
     name: SUPERCHIC_on_Fedora_cmake
     runs-on: ubuntu-latest
     container:
-        image: fedora:latest
+        image: fedora:37
     steps:
     - name: Checkout
       uses: actions/checkout@v3
