--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,53 @@ jobs:
           cmake --install BUILD
           ctest --test-dir BUILD -j 2 --output-on-failure
 
+  compilejobRocky8_NVHPC:
+    name: SUPERCHIC_on_Rocky8x86_64_NVHPC
+    runs-on: ubuntu-latest
+    container:
+        image: nvcr.io/nvidia/nvhpc:23.11-devel-cuda12.3-rockylinux8
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Install 
+      run: |
+           yum -y install epel-release
+           dnf -y install 'dnf-command(copr)'
+           dnf -y copr enable averbyts/HEPrpms 
+           yum -y install  gcc gcc-c++ make wget which cmake cmake-data cmake-filesystem lhapdf lhapdf-devel  apfel apfel-devel pythia8 pythia8-devel pythia8-lhapdf HepMC3-devel HepMC-devel Rivet Rivet-devel
+    - name: Compile   
+      run: |
+          cmake -S . -B BUILD  -DCMAKE_Fortran_COMPILER=nvfortran -DCMAKE_INSTALL_PREFIX=$(pwd)/../INSTALL  -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON -DSUPERCHIC_DOWNLOAD_PDFS=ON
+          cmake --build BUILD -j
+          cmake --install BUILD
+          ctest --test-dir BUILD -j 2 --output-on-failure
+
+  compilejobRocky9_HPCKIT:
+    name: SUPERCHIC_on_Rocky9x86_64_Intel_HPCKIT
+    runs-on: ubuntu-latest
+    container:
+        image: intel/oneapi-hpckit:2024.0.1-devel-rockylinux9
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Install 
+      run: |
+           yum -y install epel-release
+           dnf -y install 'dnf-command(copr)'
+           dnf -y copr enable averbyts/HEPrpms 
+           yum -y install  gcc gcc-c++ make wget which cmake cmake-data cmake-filesystem lhapdf lhapdf-devel  apfel apfel-devel pythia8 pythia8-devel pythia8-lhapdf HepMC3-devel HepMC-devel Rivet Rivet-devel
+    - name: Compile_with_ifx   
+      run: |
+          cmake -S . -B BUILDifx -DCMAKE_Fortran_COMPILER=ifx -DCMAKE_INSTALL_PREFIX=$(pwd)/../INSTALLifx  -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON -DSUPERCHIC_DOWNLOAD_PDFS=ON
+          cmake --build BUILDifx -j
+          cmake --install BUILDifx
+          ctest --test-dir BUILDifx -j 2 --output-on-failure
+    - name: Compile_with_ifort   
+      run: |
+          cmake -S . -B BUILDifort -DCMAKE_Fortran_COMPILER=ifort -DCMAKE_INSTALL_PREFIX=$(pwd)/../INSTALLifx  -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON -DSUPERCHIC_DOWNLOAD_PDFS=ON
+          cmake --build BUILDifort -j
+          cmake --install BUILDifort
+          ctest --test-dir BUILDifort -j 2 --output-on-failure
 
   compilejobOSX:
     runs-on: macos-latest
