--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,8 @@ on:
     - cron:  "0 0 1/600 * *"
 
 jobs:
-  compilejobFedora:
-    name: SUPERCHIC_on_Fedora_cmake
+  compilejobFedora37x86_64_GNU:
+    name: SUPERCHIC_on_Fedora37x86_64_GNU
     runs-on: ubuntu-latest
     container:
         image: fedora:37
@@ -27,7 +27,7 @@ jobs:
           cmake --install BUILD
           ctest --test-dir BUILD -j 2 --output-on-failure
 
-  compilejobRocky8_NVHPC:
+  compilejobRocky8x86_64_NVHPC:
     name: SUPERCHIC_on_Rocky8x86_64_NVHPC
     runs-on: ubuntu-latest
     container:
@@ -48,8 +48,8 @@ jobs:
           cmake --install BUILD
           ctest --test-dir BUILD -j 2 --output-on-failure
 
-  compilejobRocky9_HPCKIT:
-    name: SUPERCHIC_on_Rocky9x86_64_Intel_HPCKIT
+  compilejobRocky9x86_64_HPCKIT:
+    name: SUPERCHIC_on_Rocky9x86_64_HPCKIT
     runs-on: ubuntu-latest
     container:
         image: intel/oneapi-hpckit:2024.0.1-devel-rockylinux9
@@ -75,9 +75,9 @@ jobs:
           cmake --install BUILDifort
           ctest --test-dir BUILDifort -j 2 --output-on-failure
 
-  compilejobOSX:
+  compilejobOSXx86_64_GNU:
     runs-on: macos-latest
-    name: SUPERCHIC_on_OSX_cmake_make
+    name: SUPERCHIC_on_OSXx86_64_GNU
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -86,13 +86,15 @@ jobs:
           brew install wget coreutils gcc gsed make
           brew tap davidchall/hep
           brew install lhapdf apfel pythia8 hepmc3 hepmc2 rivet yoda
-    - name: Compile
+    - name: Compile_with_make
       run: |
            mkdir -p obj lib
            gsed -i 's/gfortran/gfortran-13/g' makefile.make
            gsed -i '4s/.*/APFELLIB=\`apfel-config --libdir\`/' makefile.make
            cat makefile.make
            make -f makefile.make -j 2
+    - name: Compile_with_cmake
+      run: |
            cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=OFF -DCMAKE_Fortran_COMPILER=gfortran-13 -DSUPERCHIC_DOWNLOAD_PDFS=ON
            cmake --build BUILD -j 2 --verbose
            cmake --install BUILD 
