--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,11 +174,13 @@ else()
                         "$<$<COMPILE_LANG_AND_ID:Fortran,PGI>:-mcmodel=medium>")
 endif()
 set_source_files_properties( ${CMAKE_CURRENT_SOURCE_DIR}/src/diss/Elastic.f ${CMAKE_CURRENT_SOURCE_DIR}/src/inition/gdrin.f 
+                            ${CMAKE_CURRENT_SOURCE_DIR}/src/histo.f 
                              PROPERTIES Fortran_PREPROCESS ON Fortran_FORMAT FREE)
 
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin" OR  ${CMAKE_VERSION} VERSION_LESS 3.18)
 set_source_files_properties( ${CMAKE_CURRENT_SOURCE_DIR}/src/user/histo.f ${CMAKE_CURRENT_SOURCE_DIR}/src/diss/Elastic.f ${CMAKE_CURRENT_SOURCE_DIR}/src/inition/gdrin.f 
+                            ${CMAKE_CURRENT_SOURCE_DIR}/src/histo.f 
                              PROPERTIES COMPILE_FLAGS "-traditional -cpp" )  
 endif()
 
