input card in Build/bin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,7 +240,8 @@ if ( LATEX_FOUND AND LATEX_PDFLATEX_FOUND AND LATEX_BIBTEX_FOUND)
   endif()
 endif()
 
-
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/bin/input.DAT
+              DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/)
 
 install(TARGETS superchic init DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT bin)
 install(TARGETS superchicLib   DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT libs)
