--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -55,12 +55,6 @@ endif()
 if (SUPERCHIC_DOWNLOAD_PDFS)
   include(FetchContent)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/PDFS)
-  FetchContent_Declare(SF_MSHT20qed_nnlo URL https://superchic.hepforge.org/SF_MSHT20qed_nnlo.tar.gz URL_HASH   MD5=956fe924fc72dd947769078b1b68d7d5)
-  FetchContent_GetProperties(SF_MSHT20qed_nnlo)
-  if (NOT SF_MSHT20qed_nnlo_POPULATED)
-    FetchContent_Populate(SF_MSHT20qed_nnlo)
-    file(CREATE_LINK ${sf_msht20qed_nnlo_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/PDFS/SF_MSHT20qed_nnlo SYMBOLIC)
-  endif()
 
   FetchContent_Declare(MSHT20qed_nnlo URL https://lhapdfsets.web.cern.ch/current/MSHT20qed_nnlo.tar.gz URL_HASH   MD5=cce676b0bc21bb985c40fceac67e97ce)
   FetchContent_GetProperties(MSHT20qed_nnlo)
@@ -75,8 +69,11 @@ if (SUPERCHIC_DOWNLOAD_PDFS)
     FetchContent_Populate(cteq6l1)
     file(CREATE_LINK ${cteq6l1_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/PDFS/cteq6l1 SYMBOLIC)
   endif()
-  LIST(APPEND STANDARDENVIRONMENT "LHAPDF_DATA_PATH=${CMAKE_CURRENT_BINARY_DIR}/PDFS")
+  LIST(APPEND STANDARDENVIRONMENT "LHAPDF_DATA_PATH=${CMAKE_CURRENT_BINARY_DIR}/PDFS:${PROJECT_BINARY_DIR}/unpacked/SF")
+else()
+  LIST(APPEND STANDARDENVIRONMENT "LHAPDF_DATA_PATH=$ENV{LHAPDF_DATA_PATH}:${PROJECT_BINARY_DIR}/unpacked/SF")
 endif()
+
 message(STATUS "SuperChic test: STANDARDENVIRONMENT=${STANDARDENVIRONMENT}")
 
 
