--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,23 +49,33 @@ jobs:
           cmake --install BUILD
 #          ctest --test-dir BUILD -j 2 --output-on-failure
 
-  Rocky9x86_64_HPCKIT:
-    name: SC_on_Rocky9x86_64_HPCKIT
+  compilejobFedorax86_64_Intel_HPCKIT:
+    name: Fedorax86_64_Intel_HPCKIT
     runs-on: ubuntu-latest
-    container:
-        image: intel/oneapi-hpckit:2024.0.1-devel-rockylinux9
+    container: fedora:latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Install 
+    - uses: actions/checkout@v3
+    - name: Install
       run: |
-           yum -y install epel-release
-           dnf config-manager --set-enabled crb           
-           dnf -y install 'dnf-command(copr)'
-           dnf -y copr enable averbyts/HEPrpms 
-           yum -y install  gcc gcc-c++ make wget which cmake cmake-data cmake-filesystem lhapdf lhapdf-devel  apfel apfel-devel pythia8 pythia8-devel pythia8-lhapdf HepMC3-devel HepMC-devel Rivet Rivet-devel
+             dnf -y install 'dnf-command(copr)'
+             dnf -y copr enable averbyts/HEPrpms 
+             dnf -y install  gcc gcc-c++ gcc-gfortran make wget which cmake cmake-data cmake-filesystem lhapdf lhapdf-devel  apfel apfel-devel pythia8 pythia8-devel pythia8-lhapdf HepMC3-devel HepMC-devel Rivet Rivet-devel
+             tee > /tmp/oneAPI.repo << EOF
+             [oneAPI]
+             name=Intel(R) oneAPI repository
+             baseurl=https://yum.repos.intel.com/oneapi
+             enabled=1
+             gpgcheck=1
+             repo_gpgcheck=1
+             gpgkey=https://yum.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+             EOF
+             sudo mv /tmp/oneAPI.repo /etc/yum.repos.d/
+             dnf -y clean all
+             dnf -y install  intel-oneapi-compiler-dpcpp-cpp intel-oneapi-compiler-fortran
+             source /opt/intel/oneapi/compiler/latest/env/vars.sh
     - name: Compile_with_ifort   
       run: |
+          source /opt/intel/oneapi/compiler/latest/env/vars.sh
           cmake -S . -B BUILDifort -DCMAKE_Fortran_COMPILER=ifort -DCMAKE_INSTALL_PREFIX=$(pwd)/../INSTALLifort  -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON -DSUPERCHIC_DOWNLOAD_PDFS=ON
           cmake --build BUILDifort -j
           cmake --install BUILDifort
