Tests with Rivet

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -113,19 +113,28 @@ endif()
 
 endmacro()
 
+if (SUPERCHIC_ENABLE_RIVET)
+  add_library(RivetSCKINEMATICS MODULE SCKINEMATICS.cc)
+  target_link_libraries(RivetSCKINEMATICS PRIVATE ${RIVET_LIBRARIES} HepMC3::HepMC3)
+  target_include_directories(RivetSCKINEMATICS PRIVATE ${RIVET_INCLUDE_DIRS})
+  set_target_properties(RivetSCKINEMATICS PROPERTIES PREFIX "")
+endif()
 macro(sctestrivet NN  process DD)
 if (SUPERCHIC_ENABLE_RIVET)
 string(REPLACE " " ";" D ${DD})
 #FCC350eeunw_${process}_${diff}_lhe ${diff}_ee ${process}
   set(fo "")
+  set(ref "")
   foreach( diff ${D})
     set(MM ${NN}_${process}_${diff}_lhe)
-    set(out ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/showered${MM}.yoda)
-    add_test(NAME RIVET_LHEF_${NN}_${MM} COMMAND ${Python_EXECUTABLE} ${RIVET_EXE} --ignore-beams -a MC_XS ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/showered${MM}.hepmc -o  ${out})
-    set_tests_properties( RIVET_LHEF_${NN}_${MM} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" TIMEOUT 1000 DEPENDS "SUPERCHIC_${NN}_${MM}")
+    set(out ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/${MM}.yoda)
+    set(rf ${CMAKE_CURRENT_SOURCE_DIR}/reference/RUN_${NN}/evrecs/${MM}.yoda)
+    add_test(NAME RIVET_LHEF_${NN}_${MM} COMMAND ${Python_EXECUTABLE} ${RIVET_EXE} --pwd --ignore-beams -a MC_XS -a SCKINEMATICS ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/evrectest${MM}.dat -o  ${out})
+    set_tests_properties( RIVET_LHEF_${NN}_${MM} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" TIMEOUT 1000 DEPENDS "SUPERCHIC_${NN}_${MM};RivetSCKINEMATICS")
     list(APPEND fo ${out})
+    list(APPEND ref ${rf})
   endforeach()
-  add_test(NAME PLOT_LHEF_${NN}_${process} COMMAND rivet-mkhtml ${fo} -o ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/rivet/${process}  )
+  add_test(NAME PLOT_LHEF_${NN}_${process} COMMAND rivet-mkhtml ${fo}  -o ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/rivet/${process}  )
   foreach( diff ${D})
     set(MM ${NN}_${process}_${diff}_lhe)
     set_tests_properties( PLOT_LHEF_${NN}_${process} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" TIMEOUT 1000 DEPENDS "RIVET_LHEF_${NN}_${MM}")
